--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -47,15 +47,19 @@ class: center, middle
 
 class: inverse, center, middle
 
-# Section title
+# Reasons Behind Question Choice
 
 ---
 
-# Hello World
+class: center, middle
 
-- Click the `Knit` button to compile your presentation
+- We selected this question as mental health is a prominent issue in society and analysis of the data in this way could give some indicators of ways to improve the overall happiness of a country.
 
-- Make sure to commit and push all resulting files to your GitHub repo
+
+- The variables we think will best suit our question and hypotheses are, government trust, how the country is doing in terms of GDP and economy, the countries citizen freedom rating and the projected life expectancy of its citizens.
+ And how these factors can vary independently and jointly with the countries happiness rating. 
+If factors are proportional or inverse with each other. 
+
 
 ---
 
