sarah: more pages

--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -45,12 +45,24 @@ class: center, middle
 
 ---
 
+class: center, middle
+
+# Dataset Information
+
+The dataset we will be using for the project will be the World Happiness Report.
+The dataset was found on the website Kaggle (https://www.kaggle.com/datasets/unsdsn/world-happiness)
+
+The dataset uses the variables of Country, Region, Happiness rank, Happiness score, Standard error, Economy(GDP), Family, Health (Life Expectancy), Freedom, Trust (Government Corruption), Generosity and Dystopia Residual.
+
+The dataset we are using was collected in 2015.
+
+---
+
 class: inverse, center, middle
 
 # Reasons Behind Question Choice
 
 ---
-
 class: center, middle
 
 - We selected this question as mental health is a prominent issue in society and analysis of the data in this way could give some indicators of ways to improve the overall happiness of a country.
