--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -43,6 +43,8 @@ class: center, middle
 
 ## How  Do a Range of Factors Affect Worldwide Happiness?
 
+![](img/happy person brazil.jpg)
+
 ---
 
 class: center, middle
