--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -116,7 +116,10 @@ class: inverse, middle, center
 happiness %>%
 ggplot(data = happiness, 
        mapping = aes(x = family, y = happiness_score))+
-  geom_jitter()
+  geom_jitter()+
+  labs(title = "Happiness Score with Family",
+       x = "Family",
+       y = "Happiness Score")
 
 ```
 
@@ -131,7 +134,10 @@ class: inverse, middle, center
 happiness %>%
 ggplot(data = happiness, 
        mapping = aes(x = freedom, y = happiness_score))+
-  geom_jitter()
+  geom_jitter()+
+  labs(title = "Happiness Score with Freedom",
+       x = "Freedom",
+       y = "Happiness Score")
 
 ```
 
@@ -145,7 +151,10 @@ class: inverse, middle, center
 happiness %>%
 ggplot(data = happiness, 
        mapping = aes(x = health, y = happiness_score))+
-  geom_jitter()
+  geom_jitter()+
+  labs(title = "Happiness Score with Health",
+       x = "Health",
+       y = "Happiness Score")
 
 ```
 
@@ -159,7 +168,10 @@ class: inverse, middle, center
 happiness %>%
 ggplot(data = happiness, 
        mapping = aes(x = trust, y = happiness_score))+
-  geom_jitter()
+  geom_jitter()+
+  labs(title = "Happiness Score with Government Trust",
+       x = "Trust",
+       y = "Happiness Score")
 
 ```
 
@@ -173,7 +185,11 @@ class: inverse, middle, center
 happiness %>%
 ggplot(data = happiness, 
        mapping = aes(x = economy, y = happiness_score))+
-  geom_jitter()
+  geom_jitter()+
+  labs(title = "Happiness Score with Economy", 
+       subtitle = "In terms of GDP",
+       x = "Economy",
+       y = "Happiness Score")
 
 ```
 
