new graph for regions

--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -304,6 +304,18 @@ happiness %>%
 
 ---
 
+```{r echo=FALSE}
+happiness_countries %>%
+  ggplot(data = happiness_countries, 
+         mapping = aes(x = happiness_score, y = Region.x))+
+  geom_point()+
+  labs(title = "Happiness Score shown by Region",
+       x = "Happiness Score",
+       y = "Region")
+```
+
+---
+
 # Code
 
 ```{r boring-analysis}
